--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Muhhamad Affan Hasby</title>
-	<meta name="description" content="Bolby - Portfolio/CV/Resume HTML Template">
+	<meta name="description" content="Affan Hasby">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="images/profil2.png">
 
@@ -88,7 +88,7 @@
 		<!-- logo image -->
 		<div class="site-logo">
 			<a href="index.html">
-				<img src="images/logo.svg" alt="Bolby" />
+				<img src="images/logo.svg" alt="Hasby" />
 			</a>
 		</div>
 	</div>
@@ -100,7 +100,7 @@
 	<!-- logo image -->
 	<div class="site-logo">
 		<a href="index.html">
-			<img src="images/logo.svg" alt="Bolby" />
+			<img src="images/logo.svg" alt="Hasby" />
 		</a>
 	</div>
 	
@@ -135,7 +135,7 @@
 			<!-- intro -->
 			<div class="intro">
 				<!-- avatar image -->
-				<img src="images/profil1.svg" alt="Bolby" class="mb-4" />
+				<img src="images/profil1.svg" alt="Hasby" class="mb-4" />
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">Affan Hasby</h1>
@@ -210,7 +210,7 @@
 				<div class="col-md-3">
 					<div class="text-center text-md-left">
 						<!-- avatar image -->
-						<img src="images/profil2.png" alt="Bolby" />
+						<img src="images/profil2.png" alt="Hasby" />
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
@@ -1032,7 +1032,7 @@
 							<h4 class="my-0 title"><a href="#">Common Misconceptions About Payment</a></h4>
 							<ul class="list-inline meta mb-0 mt-2">
 								<li class="list-inline-item">07 February, 2020</li>
-								<li class="list-inline-item">Bolby</li>
+								<li class="list-inline-item">Hasby</li>
 							</ul>
 						</div>
 					</div>
@@ -1052,7 +1052,7 @@
 							<h4 class="my-0 title"><a href="#">3 Things To Know About Startup Business</a></h4>
 							<ul class="list-inline meta mb-0 mt-2">
 								<li class="list-inline-item">06 February, 2020</li>
-								<li class="list-inline-item">Bolby</li>
+								<li class="list-inline-item">Hasby</li>
 							</ul>
 						</div>
 					</div>
