--- a/index.html
+++ b/index.html
@@ -533,6 +533,23 @@
 			<div class="row portfolio-wrapper">
 				
 				<!-- portfolio item -->
+				<div class="col-md-4 col-sm-6 grid-item jurnal">
+					<a href="https://drive.google.com/file/d/1NR9UPMMTcG4-6yzsUkyqU_HuG6Wpodax/view?usp=sharing" target="_blank">
+						<div class="portfolio-item rounded shadow-dark">
+							<div class="details">
+								<span class="term">UX Research</span>
+								<h4 class="title">Laundryin UX Research</h4>
+								<span class="more-button"><i class="icon-link"></i></span>
+							</div>
+							<div class="thumb">
+								<img src="images/laundry.svg" alt="Portfolio-title" />
+								<div class="mask"></div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<!-- portfolio item -->
 				<div class="col-md-4 col-sm-6 grid-item web">
 					<a href="http://www.affanhasby.tech/PlayTraditionalGame/" target="_blank">
 						<div class="portfolio-item rounded shadow-dark">
