--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@
 				<li class="list-inline-item" data-filter=".web">Web</li>
 				<li class="list-inline-item" data-filter=".ui">UI Design</li>
 				<li class="list-inline-item" data-filter=".jurnal">Journal</li>
+				<li class="list-inline-item" data-filter=".UX">UX Research</li>
 			</ul>
 			
 			<!-- portfolio filter (mobile) -->
@@ -526,14 +527,33 @@
 					<option value=".web">Web</option>
 					<option value=".ui">UI Design</option>
 					<option value=".jurnal">Journal</option>
+					<option value=".UX">UX Research</option>
 				</select>
 			</div>
 			
 			<!-- portolio wrapper -->
 			<div class="row portfolio-wrapper">
 				
+
 				<!-- portfolio item -->
-				<div class="col-md-4 col-sm-6 grid-item jurnal">
+				<div class="col-md-4 col-sm-6 grid-item">
+					<a href="https://drive.google.com/file/d/1EaLbRTE_gNyYJUUNm-2wuHDLaLqa5VxQ/view?usp=sharing" target="_blank">
+						<div class="portfolio-item rounded shadow-dark">
+							<div class="details">
+								<span class="term">Product Manager</span>
+								<h4 class="title">Assignment Product Manager Mitramas Infosys Global</h4>
+								<span class="more-button"><i class="icon-link"></i></span>
+							</div>
+							<div class="thumb">
+								<img src="images/mig.jpg" alt="Portfolio-title" />
+								<div class="mask"></div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<!-- portfolio item -->
+				<div class="col-md-4 col-sm-6 grid-item UX">
 					<a href="https://drive.google.com/file/d/1NR9UPMMTcG4-6yzsUkyqU_HuG6Wpodax/view?usp=sharing" target="_blank">
 						<div class="portfolio-item rounded shadow-dark">
 							<div class="details">
