--- a/index.html
+++ b/index.html
@@ -1055,25 +1055,25 @@
 					</div>
 				</div>
 
-				<!-- <div class="col-md-4">
+				<div class="col-md-4">
 					<div class="blog-item rounded bg-white shadow-dark wow fadeIn">
 						<div class="thumb">
-							<a href="#">
-								<span class="category">Tutorial</span>
+							<a href="https://affanhasby.medium.com/ux-case-study-halaman-login-apps-my-telkomsel-f66f8c42f5b2">
+								<span class="category">UX Case Study</span>
 							</a>
-							<a href="#">
-								<img src="https://via.placeholder.com/330x215" alt="blog-title" />
+							<a href="https://affanhasby.medium.com/ux-case-study-halaman-login-apps-my-telkomsel-f66f8c42f5b2">
+								<img src="images/telkomsel.svg" alt="blog-title" />
 							</a>
 						</div>
 						<div class="details">
-							<h4 class="my-0 title"><a href="#">Common Misconceptions About Payment</a></h4>
+							<h4 class="my-0 title"><a href="https://affanhasby.medium.com/ux-case-study-halaman-login-apps-my-telkomsel-f66f8c42f5b2">UX Case Study — Halaman Login Apps My Telkomsel</a></h4>
 							<ul class="list-inline meta mb-0 mt-2">
-								<li class="list-inline-item">07 February, 2020</li>
-								<li class="list-inline-item">Hasby</li>
+								<li class="list-inline-item">08 September, 2021</li>
+								<li class="list-inline-item">Affan</li>
 							</ul>
 						</div>
 					</div>
-				</div> -->
+				</div>
 
 				<!-- <div class="col-md-4">
 					<div class="blog-item rounded bg-white shadow-dark wow fadeIn">
