--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<!-- about text -->
-								<p>I'm Affan Hasby, Product Management Intern at CXO CT Corp. I have rich experience in web site design and building and customization, also I am good at Project and Product Management.</p>
+								<p>I'm Affan Hasby, Product Manager Intern at CXO CT Corp. I have rich experience in UI/UX Design & Research, Web building and customization, also I am good at Project and Product Management.</p>
 								<div class="mt-3">
 									<a href="#" class="btn btn-default">Download CV</a>
 								</div>
