--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">Affan Hasby</h1>
-				<span>I'm a <span class="text-rotating">UI/UX designer, Front-End developer, Product Management Intern at CXO CT Corp, Project Manager</span></span>
+				<span>I'm a <span class="text-rotating">Product Manager, Project Manager, UX Researcher, UI/UX designer, Front-End developer</span></span>
 
 				<!-- social icons -->
 				<ul class="social-icons light list-inline mb-0 mt-4">
@@ -220,7 +220,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<!-- about text -->
-								<p>I'm Affan Hasby, Product Manager Intern at CXO CT Corp. I have rich experience in UI/UX Design & Research, Web building and customization, also I am good at Project and Product Management.</p>
+								<p>I'm Affan Hasby, I obtained a Bachelor's Degree in Computer Science, Majoring Informatics Engineering in 2021. I have rich experience in Product Manager, Project Manager, UX Research, Web building and customization. Skilled in Teamwork, Leadership, Project Management, and Team Leadership. </p>
 								<div class="mt-3">
 									<a href="#" class="btn btn-default">Download CV</a>
 								</div>
@@ -230,11 +230,11 @@
 								<!-- skill item -->
 								<div class="skill-item">
 									<div class="skill-info clearfix">
-										<h4 class="float-left mb-3 mt-0">Development</h4>
-										<span class="float-right">80%</span>
+										<h4 class="float-left mb-3 mt-0">Product & Project Management</h4>
+										<span class="float-right">85%</span>
 									</div>
 									<div class="progress">
-										<div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="80" data-color="#FFD15C">
+										<div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="85" data-color="#FFD15C">
 										</div>
 									</div>
 									<div class="spacer" data-height="20"></div>
@@ -243,7 +243,7 @@
 								<!-- skill item -->
 								<div class="skill-item">
 									<div class="skill-info clearfix">
-										<h4 class="float-left mb-3 mt-0">UI/UX design</h4>
+										<h4 class="float-left mb-3 mt-0">UX Research</h4>
 										<span class="float-right">85%</span>
 									</div>
 									<div class="progress">
@@ -256,7 +256,7 @@
 								<!-- skill item -->
 								<div class="skill-item">
 									<div class="skill-info clearfix">
-										<h4 class="float-left mb-3 mt-0">Product & Project Management</h4>
+										<h4 class="float-left mb-3 mt-0">Developer</h4>
 										<span class="float-right">80%</span>
 									</div>
 									<div class="progress">
@@ -345,9 +345,9 @@
 					<!-- service box -->
 					<div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
 						<img src="images/cxo.svg" alt="UI/UX design" />
-						<h3 class="mb-3 mt-0">Product Management</h3>
+						<h3 class="mb-3 mt-0">Product Manager</h3>
 						<p class="mb-0">CXO CT Corp</p>
-						<p class="mb-0">Jun 2021 - Present</p>
+						<p class="mb-0">Jun 2021 - Oct 2021</p>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
@@ -449,8 +449,8 @@
 						<!-- timeline item -->
 						<div class="timeline-container wow fadeInUp">
 							<div class="content">
-								<span class="time">Jun 2020 - Present</span>
-								<h3 class="title">Product Management Intern at CXO CT Corp</h3>
+								<span class="time">Jun 2020 - Oct 2021</span>
+								<h3 class="title">Product Manager Intern at CXO CT Corp</h3>
 								<p>Suggest product enhancements to improve user experience,
 									Perform quality assurance controls on products,
 									Coordinate with the engineering department to deliver functional solutions.</p>
@@ -518,6 +518,7 @@
 				<li class="list-inline-item" data-filter=".ui">UI Design</li>
 				<li class="list-inline-item" data-filter=".jurnal">Journal</li>
 				<li class="list-inline-item" data-filter=".UX">UX Research</li>
+				<li class="list-inline-item" data-filter=".Product">Product Manager</li>
 			</ul>
 			
 			<!-- portfolio filter (mobile) -->
@@ -528,6 +529,7 @@
 					<option value=".ui">UI Design</option>
 					<option value=".jurnal">Journal</option>
 					<option value=".UX">UX Research</option>
+					<option value=".Product">Product Manager</option>
 				</select>
 			</div>
 			
@@ -536,7 +538,41 @@
 				
 
 				<!-- portfolio item -->
-				<div class="col-md-4 col-sm-6 grid-item">
+				<div class="col-md-4 col-sm-6 grid-item Product web">
+					<a href="http://affanhasby.my.id/wp/" target="_blank">
+						<div class="portfolio-item rounded shadow-dark">
+							<div class="details">
+								<span class="term">Product Manager || Web</span>
+								<h4 class="title">CXO E-Commerce</h4>
+								<span class="more-button"><i class="icon-link"></i></span>
+							</div>
+							<div class="thumb">
+								<img src="images/wp.jpg" alt="Portfolio-title" />
+								<div class="mask"></div>
+							</div>
+						</div>
+					</a>
+				</div>
+				
+				<!-- portfolio item -->
+				<div class="col-md-4 col-sm-6 grid-item Product web">
+					<a href="https://hasbyaffan.wixsite.com/trysite" target="_blank">
+						<div class="portfolio-item rounded shadow-dark">
+							<div class="details">
+								<span class="term">Product Manager || Web</span>
+								<h4 class="title">CXO Media || NSS</h4>
+								<span class="more-button"><i class="icon-link"></i></span>
+							</div>
+							<div class="thumb">
+								<img src="images/nss.jpg" alt="Portfolio-title" />
+								<div class="mask"></div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<!-- portfolio item -->
+				<div class="col-md-4 col-sm-6 grid-item Product">
 					<a href="https://drive.google.com/file/d/1EaLbRTE_gNyYJUUNm-2wuHDLaLqa5VxQ/view?usp=sharing" target="_blank">
 						<div class="portfolio-item rounded shadow-dark">
 							<div class="details">
