--- a/index.html
+++ b/index.html
@@ -907,12 +907,24 @@
 		<div class="container">
 			
 			<!-- section title -->
-			<h2 class="section-title wow fadeInUp">Clients & Reviews</h2>
+			<h2 class="section-title wow fadeInUp">Recommendations</h2>
 
 			<div class="spacer" data-height="60"></div>
 			
 			<!-- testimonials wrapper -->
 			<div class="testimonials-wrapper">
+				
+				<!-- testimonial item -->
+				<div class="testimonial-item text-center mx-auto">
+					<div class="thumb mb-3 mx-auto">
+						<img src="images/testimonials/renalto.jpg" alt="customer-name" />						
+					</div>
+					<h4 class="mt-3 mb-0">Renalto Wangistu</h4>
+					<span class="subtitle">Product Manager at CXO CT Corp</span>
+					<div class="bg-white padding-30 shadow-dark rounded triangle-top position-relative mt-4">
+						<p class="mb-0">During my time working at CXO, I was managing Affan directly and I was suprised by his strong work ethic and go getter attitude. I think with this attitude combined with his knowledge, he will do great things. Wish you all the best Fan</p>
+					</div>
+				</div>
 				
 				<!-- testimonial item -->
 				<div class="testimonial-item text-center mx-auto">
@@ -1074,26 +1086,6 @@
 					<!-- blog item -->
 					<div class="blog-item rounded bg-white shadow-dark wow fadeIn">
 						<div class="thumb">
-							<a href="https://affanhasby.medium.com/generasi-gigih-program-apa-sih-521bd82a8d55">
-								<span class="category">Program</span>
-							</a>
-							<a href="https://affanhasby.medium.com/generasi-gigih-program-apa-sih-521bd82a8d55">
-								<img src="images/gigih.svg" alt="blog-title" />
-							</a>
-						</div>
-						<div class="details">
-							<h4 class="my-0 title"><a href="https://affanhasby.medium.com/generasi-gigih-program-apa-sih-521bd82a8d55">Generasi Gigih?, Program apa sih?</a></h4>
-							<ul class="list-inline meta mb-0 mt-2">
-								<li class="list-inline-item">21 June, 2021</li>
-								<li class="list-inline-item">Affan</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="blog-item rounded bg-white shadow-dark wow fadeIn">
-						<div class="thumb">
 							<a href="https://affanhasby.medium.com/ux-case-study-halaman-login-apps-my-telkomsel-f66f8c42f5b2">
 								<span class="category">UX Case Study</span>
 							</a>
@@ -1105,6 +1097,26 @@
 							<h4 class="my-0 title"><a href="https://affanhasby.medium.com/ux-case-study-halaman-login-apps-my-telkomsel-f66f8c42f5b2">UX Case Study — Halaman Login Apps My Telkomsel</a></h4>
 							<ul class="list-inline meta mb-0 mt-2">
 								<li class="list-inline-item">08 September, 2021</li>
+								<li class="list-inline-item">Affan</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="blog-item rounded bg-white shadow-dark wow fadeIn">
+						<div class="thumb">
+							<a href="https://affanhasby.medium.com/generasi-gigih-program-apa-sih-521bd82a8d55">
+								<span class="category">Program</span>
+							</a>
+							<a href="https://affanhasby.medium.com/generasi-gigih-program-apa-sih-521bd82a8d55">
+								<img src="images/gigih.svg" alt="blog-title" />
+							</a>
+						</div>
+						<div class="details">
+							<h4 class="my-0 title"><a href="https://affanhasby.medium.com/generasi-gigih-program-apa-sih-521bd82a8d55">Generasi Gigih?, Program apa sih?</a></h4>
+							<ul class="list-inline meta mb-0 mt-2">
+								<li class="list-inline-item">21 June, 2021</li>
 								<li class="list-inline-item">Affan</li>
 							</ul>
 						</div>
