--- a/index.html
+++ b/index.html
@@ -343,6 +343,17 @@
 
 				<div class="col-md-4">
 					<!-- service box -->
+					<div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#F97B8B">
+						<img src="images/mig.png" alt="UI/UX design" />
+						<h3 class="mb-3 mt-0">Project Manager Officer</h3>
+						<p class="mb-0">Mitramas Infosys Global</p>
+						<p class="mb-0">Nov 2021 - Now</p>
+					</div>
+					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
+				</div>
+
+				<div class="col-md-4">
+					<!-- service box -->
 					<div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
 						<img src="images/cxo.svg" alt="UI/UX design" />
 						<h3 class="mb-3 mt-0">Product Manager</h3>
@@ -361,16 +372,6 @@
 						<p class="mb-0">Aug 2020 - Jan 2021</p>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-				</div>
-
-				<div class="col-md-4">
-					<!-- service box -->
-					<div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#F97B8B">
-						<img src="images/roma.svg" alt="UI/UX design" />
-						<h3 class="mb-3 mt-0">Project Manager</h3>
-						<p class="mb-0">Roma Malkist</p>
-						<p class="mb-0">Mar 2020 - Aug 2020</p>
-					</div>
 				</div>
 
 			</div>
@@ -445,20 +446,32 @@
 
 					<!-- timeline wrapper -->
 					<div class="timeline exp bg-white rounded shadow-dark padding-30 overflow-hidden">
-
+						
 						<!-- timeline item -->
 						<div class="timeline-container wow fadeInUp">
 							<div class="content">
-								<span class="time">Jun 2020 - Oct 2021</span>
-								<h3 class="title">Product Manager Intern at CXO CT Corp</h3>
-								<p>Suggest product enhancements to improve user experience,
-									Perform quality assurance controls on products,
-									Coordinate with the engineering department to deliver functional solutions.</p>
+								<span class="time">Nov 2021 - Now</span>
+								<h3 class="title">Project Manager Officer at Mitramas Infosys Global</h3>
+								<p>Assist the Project Manager in monitoring and managing the Project. Ensure the Project runs On-time according to the Timeline. Prepare and make the routine reports for Management. Build, develop, and maintain communication between Stream Members.</p>
 							</div>
 						</div>
 
 						<!-- timeline item -->
 						<div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
+							<div class="content">
+								<span class="time">Jun 2020 - Oct 2021</span>
+								<h3 class="title">Product Manager Intern at CXO CT Corp</h3>
+								<p>Monitor product implementation and ensure timely progress.
+									Conduct research on new features that can be implemented into the product.
+									Conduct usability testing for new products with the aim of gaining user impressions and obtaining suggestions for improvement.
+									Integrate usability studies, research and market analysis into product requirement.
+									Communicating with stakeholders and other leads to ensure the vision of the products.
+									Building product prioritization based on business and customer needs.</p>
+							</div>
+						</div>
+
+						<!-- timeline item -->
+						<div class="timeline-container wow fadeInUp" data-wow-delay="0.4s">
 							<div class="content">
 								<span class="time">Aug 2020 - Jan 2021</span>
 								<h3 class="title">Front-End Web Developer at Telkom Indonesia</h3>
@@ -471,7 +484,7 @@
 						</div>
 
 						<!-- timeline item -->
-						<div class="timeline-container wow fadeInUp" data-wow-delay="0.4s">
+						<div class="timeline-container wow fadeInUp" data-wow-delay="0.6s">
 							<div class="content">
 								<span class="time">Jun 2020 - Aug 2020</span>
 								<h3 class="title">Text Data Annotator at Indonesia Association for Computational Linguistics & Prosa.AI</h3>
@@ -480,7 +493,7 @@
 						</div>
 
 						<!-- timeline item -->
-						<div class="timeline-container wow fadeInUp" data-wow-delay="0.6s">
+						<div class="timeline-container wow fadeInUp" data-wow-delay="0.8s">
 							<div class="content">
 								<span class="time">Mar 2020 - Aug 2020</span>
 								<h3 class="title">Project Manager for Social Media Strategy at Roma Malkist</h3>
