--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">Affan Hasby</h1>
-				<span>I'm a <span class="text-rotating">Product Manager, Project Manager, UX Researcher, UI/UX designer, Front-End developer</span></span>
+				<span>I'm a <span class="text-rotating">IT Project Manager at KB Bukopin</span></span>
 
 				<!-- social icons -->
 				<ul class="social-icons light list-inline mb-0 mt-4">
@@ -343,10 +343,10 @@
 
 				<div class="col-md-4">
 					<!-- service box -->
-					<div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#F97B8B">
+					<div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
 						<img src="images/mig.png" alt="UI/UX design" />
-						<h3 class="mb-3 mt-0">Project Manager Officer</h3>
-						<p class="mb-0">Mitramas Infosys Global</p>
+						<h3 class="mb-3 mt-0">IT Project Management</h3>
+						<p class="mb-0">KB Bukopin</p>
 						<p class="mb-0">Nov 2021 - Now</p>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
@@ -354,7 +354,7 @@
 
 				<div class="col-md-4">
 					<!-- service box -->
-					<div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
+					<div class="service-box rounded data-background padding-30 text-center text-light shadow-yellow" data-color="#F9D74C">
 						<img src="images/cxo.svg" alt="UI/UX design" />
 						<h3 class="mb-3 mt-0">Product Manager</h3>
 						<p class="mb-0">CXO CT Corp</p>
@@ -365,7 +365,7 @@
 
 				<div class="col-md-4">
 					<!-- service box -->
-					<div class="service-box rounded data-background padding-30 text-center shadow-yellow" data-color="#F9D74C">
+					<div class="service-box rounded data-background padding-30 text-center shadow-pink" data-color="#F97B8B">
 						<img src="images/telkom.svg" alt="UI/UX design" />
 						<h3 class="mb-3 mt-0">Front-End Web Developer</h3>
 						<p class="mb-0">Telkom Indonesia</p>
@@ -377,7 +377,7 @@
 			</div>
 
 			<div class="mt-5 text-center">
-				<p class="mb-0">Want to offer a job? <a href="#contact">Click here</a> to contact me! 👋</p>
+				<p class="mb-0">Job offer? <a href="#contact">Click here</a> to contact me! 👋</p>
 			</div>
 
 		</div>
@@ -451,7 +451,7 @@
 						<div class="timeline-container wow fadeInUp">
 							<div class="content">
 								<span class="time">Nov 2021 - Now</span>
-								<h3 class="title">Project Manager Officer at Mitramas Infosys Global</h3>
+								<h3 class="title">IT Project Management at KB Bukopin</h3>
 								<p>Assist the Project Manager in monitoring and managing the Project. Ensure the Project runs On-time according to the Timeline. Prepare and make the routine reports for Management. Build, develop, and maintain communication between Stream Members.</p>
 							</div>
 						</div>
