--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<!-- about text -->
-								<p>I'm Affan Hasby, I obtained a Bachelor's Degree in Computer Science, Majoring Informatics Engineering in 2021. I have rich experience in Product Manager, Project Manager, UX Research, Web building and customization. Skilled in Teamwork, Leadership, Project Management, and Team Leadership. </p>
+								<p>I am a IT Project Manager at KB Bukopin. Fueled by creativity and passion I look forward to creating living masterpiece at every opportunity I get. With wide range of experience, I have proven Interpersonal and leadership skills coupled with an analytical mindset enabling quick decision making and problem solving abilities. I am Digital Product enthusiast. </p>
 								<div class="mt-3">
 									<a href="#" class="btn btn-default">Download CV</a>
 								</div>
