--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 				<div class="col-md-4">
 					<!-- service box -->
 					<div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
-						<img src="images/mig.png" alt="UI/UX design" />
+						<img src="images/kbb.png" alt="UI/UX design" />
 						<h3 class="mb-3 mt-0">IT Project Management</h3>
 						<p class="mb-0">KB Bukopin</p>
 						<p class="mb-0">Nov 2021 - Now</p>
