--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">Affan Hasby</h1>
-				<span>I'm a <span class="text-rotating">IT Project Manager at KB Bukopin</span></span>
+				<span>I'm a <span class="text-rotating">Quality Assurance Tester at Stockbit</span></span>
 
 				<!-- social icons -->
 				<ul class="social-icons light list-inline mb-0 mt-4">
@@ -220,7 +220,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<!-- about text -->
-								<p>I am a IT Project Manager at KB Bukopin. Fueled by creativity and passion I look forward to creating living masterpiece at every opportunity I get. With wide range of experience, I have proven Interpersonal and leadership skills coupled with an analytical mindset enabling quick decision making and problem solving abilities. I am Digital Product enthusiast. </p>
+								<p>I am a Quality Assurance Tester at Stockbit. Fueled by creativity and passion, I look forward to creating living masterpiece at every opportunity I get. With wide range of experience, I have proven Interpersonal and leadership skills coupled with an analytical mindset enabling quick decision making and problem solving abilities. Moreover I am Digital Product enthusiast. </p>
 								<div class="mt-3">
 									<a href="#" class="btn btn-default">Download CV</a>
 								</div>
@@ -256,7 +256,7 @@
 								<!-- skill item -->
 								<div class="skill-item">
 									<div class="skill-info clearfix">
-										<h4 class="float-left mb-3 mt-0">Developer</h4>
+										<h4 class="float-left mb-3 mt-0">Developer & QA Tester</h4>
 										<span class="float-right">80%</span>
 									</div>
 									<div class="progress">
@@ -343,33 +343,30 @@
 
 				<div class="col-md-4">
 					<!-- service box -->
-					<div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
-						<img src="images/kbb.png" alt="UI/UX design" />
-						<h3 class="mb-3 mt-0">IT Project Management</h3>
-						<p class="mb-0">KB Bukopin</p>
-						<p class="mb-0">Nov 2021 - Now</p>
+					<div class="service-box rounded data-background padding-30 text-center shadow-blue" data-color="#">
+						<img src="images/stock.svg" alt="Stockbit" />
+						<h3 class="mb-3 mt-0">Quality Assurance Tester</h3>
+						<p class="mb-0">Stockbit</p>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
 
 				<div class="col-md-4">
 					<!-- service box -->
-					<div class="service-box rounded data-background padding-30 text-center text-light shadow-yellow" data-color="#F9D74C">
-						<img src="images/cxo.svg" alt="UI/UX design" />
+					<div class="service-box rounded data-background padding-30 text-center shadow-blue" data-color="#">
+						<img src="images/cxo.svg" alt="CXO CT Corp" />
 						<h3 class="mb-3 mt-0">Product Manager</h3>
 						<p class="mb-0">CXO CT Corp</p>
-						<p class="mb-0">Jun 2021 - Oct 2021</p>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
 
 				<div class="col-md-4">
 					<!-- service box -->
-					<div class="service-box rounded data-background padding-30 text-center shadow-pink" data-color="#F97B8B">
-						<img src="images/telkom.svg" alt="UI/UX design" />
+					<div class="service-box rounded data-background padding-30 text-center shadow-blue" data-color="#">
+						<img src="images/telkom.svg" alt="Telkom Indonesia" />
 						<h3 class="mb-3 mt-0">Front-End Web Developer</h3>
 						<p class="mb-0">Telkom Indonesia</p>
-						<p class="mb-0">Aug 2020 - Jan 2021</p>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
@@ -447,15 +444,25 @@
 					<!-- timeline wrapper -->
 					<div class="timeline exp bg-white rounded shadow-dark padding-30 overflow-hidden">
 						
+
 						<!-- timeline item -->
 						<div class="timeline-container wow fadeInUp">
 							<div class="content">
-								<span class="time">Nov 2021 - Now</span>
+								<span class="time">Mar 2022 - Now</span>
+								<h3 class="title">Quality Assurance Tester at Stockbit</h3>
+								<p>Collaborate with QA Engineers & QA Analyst to develop effective strategies and test plans. Report bugs and errors to development teams. Work with cross-functional teams to ensure quality throughout the software development lifecycle. Conduct post-release/post-implementation testing. help the support team to solve problems from users</p>
+							</div>
+						</div>
+
+						<!-- timeline item -->
+						<div class="timeline-container wow fadeInUp">
+							<div class="content">
+								<span class="time">Nov 2021 - Mar 2022</span>
 								<h3 class="title">IT Project Management at KB Bukopin</h3>
 								<p>Assist the Project Manager in monitoring and managing the Project. Ensure the Project runs On-time according to the Timeline. Prepare and make the routine reports for Management. Build, develop, and maintain communication between Stream Members.</p>
 							</div>
 						</div>
-
+						
 						<!-- timeline item -->
 						<div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
 							<div class="content">
