--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 								<!-- about text -->
 								<p>I am a Quality Assurance Tester at Stockbit. Fueled by creativity and passion, I look forward to creating living masterpiece at every opportunity I get. With wide range of experience, I have proven Interpersonal and leadership skills coupled with an analytical mindset enabling quick decision making and problem solving abilities. Moreover I am Digital Product enthusiast. </p>
 								<div class="mt-3">
-									<a href="file/AffaHasbyCV.pdf" class="btn btn-default">Download CV</a>
+									<a href="file/cv.pdf" class="btn btn-default">Download CV</a>
 								</div>
 								<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 							</div>
