--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">Affan Hasby</h1>
-				<span>I'm a <span class="text-rotating">Software Quality Assurance Lead Infra - Core at Stockbit</span></span>
+				<span>I'm a <span class="text-rotating">Software Quality Assurance Lead Infra at Stockbit</span></span>
 
 				<!-- social icons -->
 				<ul class="social-icons light list-inline mb-0 mt-4">
