--- a/index.html
+++ b/index.html
@@ -993,6 +993,19 @@
 			
 			<!-- testimonials wrapper -->
 			<div class="testimonials-wrapper">
+
+				<!-- testimonial item -->
+				<div class="testimonial-item text-center mx-auto">
+					<div class="thumb mb-3 mx-auto">
+						<img src="images/testimonials/ricki.jpg" alt="customer-name" />						
+					</div>
+					<h4 class="mt-3 mb-0">Ricki Bin Yamin</h4>
+					<span class="subtitle">iOS Engineer Core - Infra at Stockbit</span>
+					<div class="bg-white padding-30 shadow-dark rounded triangle-top position-relative mt-4">
+						<p class="mb-0">Affan is my best partner in building an amazing investing apps, in Stockbit. He's a good qualified QA Engineer. He can checked every details of my works, even for something that I missed as developer. His sense of finding bug is very great. His contributions were really valuable to the community. 
+							I’d gladly work with Affan!!</p>
+					</div>
+				</div>
 				
 				<!-- testimonial item -->
 				<div class="testimonial-item text-center mx-auto">
