--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
 					<span class="subtitle">iOS Engineer Core - Infra at Stockbit</span>
 					<div class="bg-white padding-30 shadow-dark rounded triangle-top position-relative mt-4">
 						<p class="mb-0">Affan is my best partner in building an amazing investing apps, in Stockbit. He's a good qualified QA Engineer. He can checked every details of my works, even for something that I missed as developer. His sense of finding bug is very great. His contributions were really valuable to the community. 
-							I’d gladly work with Affan!!</p>
+							I'd gladly work with Affan!!</p>
 					</div>
 				</div>
 				
