--- a/index.html
+++ b/index.html
@@ -449,7 +449,12 @@
 							<div class="content">
 								<span class="time">Jan 2023 - Now</span>
 								<h3 class="title">Software Quality Assurance Lead Infra - Core at Stockbit</h3>
-								<p>Maintain Stockbit Product Quality especially in infra, Manage all Infra Software Quality team (iOS, Android, Web)</p>
+								<p>Responsible for quality across three platforms namely Android, iOS and Web.
+									Estimate, prioritize, plan and coordinate testing activities.
+									Review quality of test cases written and quality of testing done by team members for every task.
+									Plan effective Regression testing cycles.
+									Collaborate with Engineer, UI/UX, and Product Management teams.
+									Create & manage bug reports and communicate with the team.</p>
 							</div>
 						</div>
 						
