--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 				<!-- social icons -->
 				<ul class="social-icons light list-inline mb-0 mt-4">
-					<li class="list-inline-item"><a href="https://www.instagram.com/affanhasby"><i class="fab fa-instagram"></i></a></li>
+					<!-- <li class="list-inline-item"><a href="https://www.instagram.com/affanhasby"><i class="fab fa-instagram"></i></a></li> -->
 					<li class="list-inline-item"><a href="https://github.com/affanhasby"><i class="fab fa-github"></i></a></li>
 					<li class="list-inline-item"><a href="https://www.linkedin.com/in/affanhasby"><i class="fab fa-linkedin"></i></a></li>
 					<li class="list-inline-item"><a href="https://dribbble.com/affanhasby"><i class="fab fa-dribbble"></i></a></li>
