--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">Affan Hasby</h1>
-				<span>I'm a <span class="text-rotating">Software Quality Assurance Lead Infra - Core at Stockbit</span></span>
+				<span>I'm a <span class="text-rotating">Software Quality Assurance Lead Infra - Core at Stockbit, MBA Student</span></span>
 
 				<!-- social icons -->
 				<ul class="social-icons light list-inline mb-0 mt-4">
@@ -401,6 +401,15 @@
 						<!-- timeline item -->
 						<div class="timeline-container wow fadeInUp">
 							<div class="content">
+								<span class="time">2023 - 2025</span>
+								<h3 class="title">Master of Business Administration - MBA at Telkom University</h3>
+								<p>Courses : Business Global and Corporate Strategic, Human Capital Strategy, Big Data Management & Analytics.</p>
+							</div>
+						</div>
+
+						<!-- timeline item -->
+						<div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
+							<div class="content">
 								<span class="time">2017 - 2021</span>
 								<h3 class="title">Bachelor of Computer Science at Telkom University</h3>
 								<p>Courses : Information System, Software Design Analysis, Computer Network and Software Development.</p>
@@ -408,7 +417,7 @@
 						</div>
 
 						<!-- timeline item -->
-						<div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
+						<div class="timeline-container wow fadeInUp" data-wow-delay="0.4s">
 							<div class="content">
 								<span class="time">Apr 2021 - Sep 2021</span>
 								<h3 class="title">Bootcamp Full-stack Web Development at Binar Academy</h3>
@@ -417,7 +426,7 @@
 						</div>
 
 						<!-- timeline item -->
-						<div class="timeline-container wow fadeInUp" data-wow-delay="0.4s">
+						<div class="timeline-container wow fadeInUp" data-wow-delay="0.6s">
 							<div class="content">
 								<span class="time">May 2021 - August 2021</span>
 								<h3 class="title">Bootcamp UI/UX Design at Productzilla</h3>
