--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <scriptbb src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></scriptbb>
     <![endif]-->
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
