--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 					<!-- buttons -->
 					<div class="mt-4">
-						<a href="#" onclick="openChat(); return false;" class="btn btn-default">Hire me</a>
+						<a href="#" onclick="openChat(); return false;" class="btn btn-default">Contact me</a>
 					</div>
 				</div>
 
@@ -290,7 +290,7 @@
 										staying up-to-date with the latest industry trends and best practices to ensure the highest quality
 										standards in my work. </p>
 									<div class="mt-3">
-										<a href="" class="btn btn-default">Download CV</a>
+										<a href="#" onclick="openChat(); return false;" class="btn btn-default">Get in touch!</a>
 									</div>
 									<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 								</div>
