--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
 
 					<!-- portfolio item -->
 					<div class="col-md-4 col-sm-6 grid-item web">
-						<a href="http://www.affan.website/PlayTraditionalGame/" target="_blank">
+						<a href="http://www.affanhasby.com/PlayTraditionalGame/" target="_blank">
 							<div class="portfolio-item rounded shadow-dark">
 								<div class="details">
 									<span class="term">Web</span>
