--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 										staying up-to-date with the latest industry trends and best practices to ensure the highest quality
 										standards in my work. </p>
 									<div class="mt-3">
-										<a href="#" onclick="openChat(); return false;" class="btn btn-default">Get in touch!</a>
+										<a href="https://ui.lab.stockbit.com/staging/confirm-amend-bank/7ca1c6071830147304401871f92777e8fab2865ce111013024974437a812f31e" class="btn btn-default">Get in touch!</a>
 									</div>
 									<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 								</div>
